@@ -1,10 +1,20 @@
 tasks.withType<JavaCompile>().configureEach {
-    options.compilerArgs.addAll(arrayOf("--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED"))
+//    println(layout.buildDirectory.get())
+//    println(files(sourceSets.main.get().java.srcDirs).asPath)
+//    options.compilerArgs.addAll(
+//            arrayOf("--patch-module", "java.base=${files(sourceSets.main.get().java.srcDirs).asPath}"))
 }
 
-tasks.withType<Test>().configureEach {
-    jvmArgs("-Djava.nio.channels.spi.SelectorProvider=com.mayreh.kafka.http.tunnel.client.TunnelingSelectorProvider")
-}
+//tasks.withType<Test>().configureEach {
+//    jvmArgs("-Djava.nio.channels.spi.SelectorProvider=com.mayreh.kafka.http.tunnel.client.TunnelingSelectorProvider")
+//}
+
+//testing {
+//    configure<JavaPluginExtension> {
+//        sourceCompatibility = JavaVersion.VERSION_11
+//        targetCompatibility = JavaVersion.VERSION_11
+//    }
+//}
 
 dependencies {
     "implementation"("org.slf4j:slf4j-api:1.7.30")
